--- a/gamedata/localization/cs-CZ.json
+++ b/gamedata/localization/cs-CZ.json
@@ -94,16 +94,16 @@
 			},
 			"manageheader" : "Spravovat vlastnictví",
 			"managejobs" : {
-				"column_enabled" : "_MISSING_Enabled",
-				"column_jobtype" : "_MISSING_Job Type",
-				"column_total" : "_MISSING_Total",
-				"column_unfilled" : "_MISSING_Unfilled",
-				"disable_all" : "_MISSING_Disable All",
-				"enable_all" : "_MISSING_Enable All",
+				"column_enabled" : "Povoleno",
+				"column_jobtype" : "Typ práce",
+				"column_total" : "Celkově",
+				"column_unfilled" : "Nezaplněno",
+				"disable_all" : "Zakázat všechny",
+				"enable_all" : "Povolit všechny",
 				"header_text" : "_MISSING_<b>{0}</b> Laborers without a job. Enabled jobs: <b>{1} / {2}</b>. Filled jobs: <b>{3} / {1}</b>",
-				"mainheader" : "_MISSING_Manage Jobs",
-				"refresh" : "_MISSING_Refresh",
-				"set_balanced" : "_MISSING_Set Balanced"
+				"mainheader" : "Zpravovat práce",
+				"refresh" : "Načíst znovu",
+				"set_balanced" : "Balancovat"
 			},
 			"manageowners" : "Spravovat vlastníky",
 			"nameedit" : "Upravit jméno kolonie:",
